<resources>
    <string name="app_name">Users</string>
    <string name="nameMain">Name</string>
    <string name="companyMain">Company</string>
    <string name="genderMain">Gender</string>
    <string name="user_photo_detail">User Photo</string>
    <string name="id">ID</string>
    <string name="is_active">Is Active</string>
    <string name="balance">Balance</string>
    <string name="age">Age</string>
    <string name="eyecolor">EyeColor</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="about">About</string>
    <string name="registered">Registered</string>
    <string name="favoritefruit">FavoriteFruit</string>
    <string name="tags">Tags</string>
    <string name="friends">Friends</string>
</resources>
